<resources>
    <string name="app_name">NotesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes_name">Заметки</string>
    <string name="text_back">Назад</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name_aboutProgram">О программе</string>
    <string name="name_settings">Настройки</string>
    <string name="name_creator">Создатель</string>
    <string name="dashkovskaya">Дашковская А.А.</string>

    <string name="orientation">Портретная</string>
    <string name="language">Русский</string>
    <string name="theme">Светлая</string>
    <string name="name_orientation">Ориентация</string>
    <string name="name_language">Язык</string>
    <string name="name_theme">Тема</string>
</resources>